--- a/myapp/templates/adminnew.html
+++ b/myapp/templates/adminnew.html
@@ -262,13 +262,14 @@
     <td>{{user.email}}</td>
     <td>{{user.phone}}</td>
     <td>{{user.place}}</td>
-    <td><p data-placement="top" data-toggle="tooltip" title="Edit"> <a href="{% url 'update' user.id %}"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></button></a></p></td>
+    <td><p data-placement="top" data-toggle="tooltip" title="Edit"> <a  title="update" href="{% url 'update' user.id %}"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></button></a></p></td>
     <td><p data-placement="top" data-toggle="tooltip" title="Delete"><a href="{% url 'delete' user.id %}"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></a></p></td>
     </tr>
 
     {% endfor %}
     
 
+    
     
    
     
