--- a/myapp/templates/adminnew.html
+++ b/myapp/templates/adminnew.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
 <style>
 
     @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css');
@@ -157,6 +160,8 @@
     margin-top: 20px;
 
 }
+
+
 </style>
 </head>
 <body>
@@ -263,8 +268,33 @@
     <td>{{user.phone}}</td>
     <td>{{user.place}}</td>
     <td><p data-placement="top" data-toggle="tooltip" title="Edit"> <a  title="update" href="{% url 'update' user.id %}"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></button></a></p></td>
-    <td><p data-placement="top" data-toggle="tooltip" title="Delete"><a href="{% url 'delete' user.id %}"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></a></p></td>
-    </tr>
+   
+    
+    <td><a type="button" class="" style="color:red" data-toggle="modal" data-target="#myModal"><span class="glyphicon glyphicon-trash"></span></a>
+
+        <!-- Modal -->
+        <div class="modal fade" id="myModal" role="dialog">
+          <div class="modal-dialog">
+          
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">{{user.username}}</h4>
+              </div>
+              <div class="modal-body">
+                <p>Do you want to delete?</p>
+              </div>
+              <div class="modal-footer">
+                <a href="{% url 'delete' user.id %}"><button class="btn btn-danger btn-sm" id="delete" data-title="Delete" data-toggle="modal" data-target="#delete" >Delete</button></a>
+
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
+            
+          </div>
+        </div></td>
+   </tr>
 
     {% endfor %}
 
@@ -330,8 +360,12 @@
             $(this).prev().find(".fa").eq(1).removeClass("fa-angle-down").addClass("fa-angle-right");        
         });
     })    
-        
+
+
+       
 </script>
+        
+
     
 </body>
 </html>
